[package]
name = "hauntnet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
x25519-dalek = "2.0"
bincode = "1.3"
crossterm = "0.26"
ratatui = "0.21"
colored = "2"
dialoguer = "0.12.0"
