[package]
name = "hauntnet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
bincode = "1.3"
crossterm = "0.26"
ratatui = "0.21"
colored = "2"
dialoguer = "0.12.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
socket2 = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"